# MatricesStudy

./: CMakeLists.txt  Test Results - MatricesStudy_tests.html
MatricesStudy/: CMakeLists.txt
MatricesStudy/private/: Matrix.cpp
MatricesStudy/public/: CommonMath.tpp  Matrix.hpp  Matrix.tpp
MatricesStudy/public/dynamic/: DynamicMatrix.hpp  DynamicMatrix.tpp
MatricesStudyTests/: CMakeLists.txt
MatricesStudyTests/private/: DynamicMatrix.cpp  Exp.cpp  FunctionsFromBegining.cpp  MatricesBaseOperation.cpp  MatricesUtils.cpp
